Archive2/b2/ff731de2f9a0ce/output
main.cpp:7:25: error: call to deleted constructor of 'std::unique_ptr<int>'
  auto f = [=](int j){ *p = j; }; 
                        ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/bits/unique_ptr.h:356:7: note: 'unique_ptr' has been explicitly marked deleted here
      unique_ptr(const unique_ptr&) = delete;
      ^
1 error generated.
